--- a/config.yaml
+++ b/config.yaml
@@ -45,6 +45,9 @@ trading:
   dynamic_take_profit:
     enabled: true
     volatility_multiplier: 2
+  dynamic_position_sizing:
+    enabled: true
+    volatility_divisor: 2
 
 telegram:
   token: 'YOUR_TELEGRAM_BOT_TOKEN'
