--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,9 @@ data:
 
 models:
   model_type: 'lstm' # Can be 'lstm' or 'transformer'
+  model_selection:
+    enabled: true
+    volatility_threshold: 0.02 # Threshold to switch between models
   garch:
     p: 1
     q: 1
@@ -48,6 +51,14 @@ trading:
   dynamic_position_sizing:
     enabled: true
     volatility_divisor: 2
+
+sentiment_analysis:
+  enabled: true
+  time_decay_factor: 0.95
+  source_weights:
+    CryptoCompare: 1.0
+    CoinTelegraph: 0.9
+    CoinDesk: 0.8
 
 telegram:
   token: 'YOUR_TELEGRAM_BOT_TOKEN'
